# B0mbFinTask

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
db/models/: __init__.py  account.py  transaction.py
db/schemas/: account.py  transaction.py
migration/: env.py
migration/versions/: ca8e4634fc7c_create_db.py
settings/: config.py  database.py
web/: app.py
web/router/: __init__.py
web/router/v1/: __init__.py  account.py  transaction.py
